# peviewer

./: .clang-format  .gitignore  CMakeLists.txt  qt5.natvis
src/: App.cpp  App.h  CMakeLists.txt  main.cpp  resource.qrc
src/component/Popup/: Popup.cpp  Popup.h  Popup.ui
src/component/Sidebar/: Sidebar.ui  sidebar.cpp  sidebar.h  sidebar.ui
src/component/SidebarItem/: SidebarItem.ui  sidebaritem.cpp  sidebaritem.h  sidebaritem.ui
src/lib/: Global.cpp  Global.h  Store.cpp  Store.h  UtilMgr.cpp  UtilMgr.h
src/lib/template/: Singleton.h
src/page/: MainWindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
